--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.8",
-    "react-native-webview": "^5.10.0"
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-webview": "^5.10.0",
+    "react-navigation": "^3.11.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
