--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,15 @@ apply plugin: "com.android.application"
 
 import com.android.build.OutputFile
 
+buildscript {
+  repositories {
+    maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal 
+  }
+  dependencies {
+    classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.10.0, 0.99.99]'
+  }
+}
+
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
@@ -138,6 +147,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-onesignal')
     implementation project(':react-native-webview')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
